# page-manager

./: README.md
manager/src/: lib.rs
manager/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
manager/src-tauri/capabilities/: default.json
manager/src-tauri/src/: lib.rs  main.rs
manager/src-tauri/src/app/: config.rs
manager/src/app/: config.rs  launch.rs
manager/webview/: app.js  index.html  style.css
